src/css/profile/mobile/common/bottombar.less
.ui-footer {
    padding: 0;
    z-index: 100;

    .ui-bottom-bar {
        display: flex;
        width: 100%;
        min-height: 56 * @px_base;
        background-color: var(--bottom-bar-color);
        padding: 0 24 * @px_base;
    
        .ui-btn {
            .font(medium);
            font-size: 18 * @sp_base;
            text-align: center;
            line-height: 36 * @unit_base;
            max-width: 100%;
            height: 56 * @px_base;
            &.ui-btn ~ .ui-btn {
                margin-left: 0;
            }
            &.ui-btn-icon {
                .font(regular);
                font-size: 12 * @sp_base;
                line-height: normal;
            }
            &.ui-btn-icon-top ~ .ui-btn-icon-top {
                margin-left: 10 * @px_base;
            }
        }
        &.ui-bottom-bar-icons {
            padding: 0 10 * @px_base;
        }
        &.ui-hidden {
            display: none;
        }
    }
}

@media all and (min-width: 673px) and (min-height: 411px) {
    .ui-footer .ui-bottom-bar {
        margin: 0 auto;
        width: 75%;
        min-width: 625 * @px_base;
        &.ui-bottom-bar-icons {
            min-width: 653 * @px_base;
        }
    }
}

